Pull data from database  using jq

--- a/app/views/rental_new.erb
+++ b/app/views/rental_new.erb
@@ -1,6 +1,15 @@
+<head>
+  <!-- <link rel="stylesheet" type="text/css" href="/style.css"> -->
+  <!-- <script src = "/src/Thermostat.js"></script> -->
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src = "/src/jq.js"></script>
+</head>
+
+
+
 <h2>Enter Rental</h2>
 
-<form action='/rental/new' method='POST'>
+<form id = "new-rental" action='/rental/new' method='POST'>
   <input type='string' name='name' placeholder='Enter name:' />
   <input type='string' name='location' placeholder='Enter location:' />
   <input type='integer' name='price' placeholder='Enter price:' />
