Display all rentals

--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -4,6 +4,18 @@
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src = "/src/jq.js"></script>
 </head>
+<body>
+<div id = "rental">
+</div>
+<!-- <span id = "name"></span><br />
+<span id = "location"></span><br />
+<span id = "price"></span><br />
+<span id = "capacity"></span><br /> -->
+</body>
+<style>
+.name {
+  color: #E15127;
+};
 
 
-<span id = "list"></span>
+</style>
