Target each rental individually

--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -5,8 +5,10 @@
   <script src = "/src/jq.js"></script>
 </head>
 <body>
-<div id = "rental">
+<div id = "rentals">
 </div>
+
+
 <!-- <span id = "name"></span><br />
 <span id = "location"></span><br />
 <span id = "price"></span><br />
@@ -16,6 +18,10 @@
 .name {
   color: #E15127;
 };
+.individual {
+  background-color: red;
+
+}
 
 
 </style>
