--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -13,15 +13,25 @@
   <!-- <link rel="stylesheet" type="text/css" href="/style.css"> -->
   <!-- <script src = "/src/Thermostat.js"></script> -->
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script src = "/src/jq.js"></script>
+  <!-- <script src = "/src/test.js"></script> -->
 </head>
 <body>
 <div id = "rentals">
 </div>
 
+<div id="test">
+  some text
+</div>
+
+<script type="text/javascript">
+
+// var id = rental.getElementById('1');
+// console.log(id);
+</script>
 
 <!-- <span id = "name"></span><br />
 <span id = "location"></span><br />
 <span id = "price"></span><br />
 <span id = "capacity"></span><br /> -->
+<script src = "/src/jq.js"></script>
 </body>
