get request from rental_overview to display rental properties

--- a/app/views/rental_overview.erb
+++ b/app/views/rental_overview.erb
@@ -1,1 +1,14 @@
-i love cats
+<!DOCTYPE html>
+<head>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
+</head>
+
+<body>
+  
+  <div id="rental-overview">
+
+  </div>
+
+<script src = "/src/rental_overview.js"></script>
+</body>
