--- a/app/views/rental_new.erb
+++ b/app/views/rental_new.erb
@@ -14,5 +14,6 @@
   <input type='integer' name='price' placeholder='Enter price:' />
   <input type='integer' name='capacity' placeholder='Enter capacity:' />
   <input type='integer' name='user_name' placeholder='Enter User Name:' />
+  Your image <input type='file' name='picture' />
   <input type='submit' value='submit'>
 </form>
