Images are saving

--- a/app/views/rental_new.erb
+++ b/app/views/rental_new.erb
@@ -8,7 +8,7 @@
 
 <h2>Enter Rental</h2>
 
-<form id = "new-rental" action='/rental/new' method='POST'>
+<form id = "new-rental" action='/rental/new' method='POST' enctype="multipart/form-data">
   <input type='string' name='name' placeholder='Enter name:' />
   <input type='string' name='location' placeholder='Enter location:' />
   <input type='integer' name='price' placeholder='Enter price:' />
