Added sign up functionality

--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,1 +1,7 @@
 Enter your details to get started!
+<form action="/signup/new" method="post">
+  <input type="text" name="name" placeholder="Username">
+  <input type="email" name="email" placeholder="Email">
+  <input type="password" name="password" placeholder="Password">
+  <button type="submit">Sign Up</button>
+</form>
