--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -12,6 +12,9 @@
 <body>
 
 <script src = "/src/jq.js"></script>
+<% if current_user %>
+  <h1>Welcome <%=current_user.name%></h1>
+<% end %>
 
   <input type="text" id="citySearch" placeholder="Search for city.."
     title="Search by city">
