--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -16,6 +16,10 @@
   <h1>Welcome <%=current_session_user.name%></h1>
 <% end %>
 
+  <form class="" action="/welcome/logout" method="post">
+    <button type="submit">Logout</button>
+  </form>
+
   <input type="text" id="citySearch" placeholder="Search for city.."
     title="Search by city">
 
