added back button

--- a/app/views/rental_overview.erb
+++ b/app/views/rental_overview.erb
@@ -6,9 +6,12 @@
 
 <body>
 
-  <div id="rental-overview">
+  <div id="rental-overview"></div>
 
-  </div>
+  <script src = "/src/rental_overview.js"></script>
 
-<script src = "/src/rental_overview.js"></script>
+  <form method='get' action='/welcome'>
+    <button type="submit">back</button>
+  </form>
+
 </body>
