Got Login and logout settled

--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -3,5 +3,6 @@ Enter your details to get started!
   <input type="text" name="name" placeholder="Username">
   <input type="email" name="email" placeholder="Email">
   <input type="password" name="password" placeholder="Password">
+  <input type="password" name="password_confirmation" placeholder="Confirm Password">
   <button type="submit">Sign Up</button>
 </form>
