user unable to sign up with email already in use

--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -10,3 +10,6 @@ Enter your details to get started!
 <% if flash[:message] %>
 <div class="message"><%= flash[:message] %></div>
 <% end %>
+<% if flash[:inuse] %>
+<div class="message"><%= flash[:inuse] %></div>
+<% end %>
