--- a/app/views/rental_new.erb
+++ b/app/views/rental_new.erb
@@ -14,6 +14,7 @@
   <input type='integer' name='price' placeholder='Enter price:' />
   <input type='integer' name='capacity' placeholder='Enter capacity:' />
   <input type='integer' name='user_name' placeholder='Enter User Name:' />
+  <input type='text' name='description' placeholder='Enter Description:' />
   Your image <input type='file' name='picture' />
   <input type='submit' value='submit'>
 </form>
