--- a/app/views/landing.erb
+++ b/app/views/landing.erb
@@ -1,15 +1,36 @@
-Welcome to MakersBnB
+<!DOCTYPE hmtl>
+<head>
+  <link rel="stylesheet" type="text/css" href="style/landing.css">
+  <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet'>
+</head>
 
-<form class="" action="/signup">
-  <button type="submit">Sign Up</button>
+<body>
+
+  <div class="circle"></div>
+
+
+<h1> Welcome to<br></h1>
+<h2>  MakersBnB </h2>
+
+
+<form action="/signup">
+  <button type="submit" class="signup">Sign Up</button>
 </form>
 
-<form class="" action="/landing/login" method ="post">
-  <input type="email" name="email" placeholder="Email">
-  <input type="password" name="password" placeholder="Password">
-  <button type="submit">Login</button>
+
+<form action="/landing/login" method ="post">
+  <input type="email" class="email" name="email" placeholder="Email">
+  <input type="password" class="password"name="password" placeholder="Password">
+  <button type="submit" class="login">Login</button>
 </form>
+
+
+
 
 <% if flash[:error] %>
 <div> <%= flash[:error] %> </div>
 <% end %>
+
+
+
+</body>
