--- a/app/views/landing.erb
+++ b/app/views/landing.erb
@@ -12,6 +12,9 @@
 <h1> Welcome to<br></h1>
 <h2>  MakersBnB </h2>
 
+<div class="icon">
+  <img src="design_images/house.png" width="50" height="50">
+</div>
 
 <form action="/signup">
   <button type="submit" class="signup">Sign Up</button>
