--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,11 +1,27 @@
-Enter your details to get started!
+<!DOCTYPE hmtl>
+<head>
+  <link rel="stylesheet" type="text/css" href="style/signup.css">
+  <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet'>
+
+</head>
+
+</body>
+
+
+<div class="circle"></div>
+<div class="square"></div>
+
+<h2> Enter your details </h2>
+<h3> to get started! </h3>
+
 <form action="/signup/new" method="post">
-  <input type="text" name="name" placeholder="Username">
-  <input type="email" name="email" placeholder="Email">
-  <input type="password" name="password" placeholder="Password">
-  <input type="password" name="password_confirmation" placeholder="Confirm Password">
-  <button type="submit">Sign Up</button>
+  <input type="text" class="name" name="name" placeholder="Username">
+  <input type="email" class="email" name="email" placeholder="Email">
+  <input type="password" class="password"name="password" placeholder="Password">
+  <input type="password" class="confirm" name="password_confirmation" placeholder="Confirm Password">
+  <button type="submit" class="submit">Sign Up</button>
 </form>
+
 
 <% if flash[:message] %>
 <div class="message"><%= flash[:message] %></div>
@@ -13,3 +29,6 @@ Enter your details to get started!
 <% if flash[:inuse] %>
 <div class="message"><%= flash[:inuse] %></div>
 <% end %>
+
+
+</body>
