--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -9,7 +9,10 @@
 
 
 <div class="circle"></div>
-<div class="square"></div>
+
+<div class="icon">
+  <img src="design_images/script.png" width="50" height="50">
+</div>
 
 <h2> Enter your details </h2>
 <h3> to get started! </h3>
@@ -20,6 +23,11 @@
   <input type="password" class="password"name="password" placeholder="Password">
   <input type="password" class="confirm" name="password_confirmation" placeholder="Confirm Password">
   <button type="submit" class="submit">Sign Up</button>
+</form>
+
+
+<form action="/">
+  <button type="submit" class="account">Ah! I already have an account</button>
 </form>
 
 
