--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -7,20 +7,43 @@
       background-color: red;
     }
   </style>
+  <link rel="stylesheet" type="text/css" href="style/welcome.css">
+  <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet'>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
+
 <body>
 
+  <div class="line"></div>
+
+  <!-- <div class="image">
+    <img src="design_images/house.png" width="50" height="50">
+  </div> -->
+
 <script src = "/src/jq.js"></script>
+<div class="user">
 <% if current_session_user %>
   <h1>Welcome <%=current_session_user.name%></h1>
 <% end %>
+</div>
 
-  <form class="" action="/welcome/logout" method="post">
-    <button type="submit">Logout</button>
+  <form action="/welcome/logout" method="post">
+    <button type="submit" class="logout">Logout</button>
   </form>
 
-  <input type="text" id="citySearch" placeholder="Search for city.."
+
+    <form action="/about">
+      <button type="submit" class="about">About</button>
+    </form>
+
+<!-- When you get to the confirmation page and mask it as the user profile,
+I've made a button that already goes there. Use this, please-->
+    <!-- <form action="/"> -->
+      <button type="submit" class="log">User Profile</button>
+    </form>
+
+
+  <input type="text" id="citySearch" class="city" placeholder="Search for city.."
     title="Search by city">
 
   <select id="selectCapacity" class="selectCapacity"></select>
