fixed logout/login/signout bug

--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -27,7 +27,7 @@
 <% end %>
 </div>
 
-  <form action="/welcome/logout" method="post">
+  <form action="/welcome/logout">
     <button type="submit" class="logout">Logout</button>
   </form>
 
@@ -38,7 +38,7 @@
 
 <!-- When you get to the confirmation page and mask it as the user profile,
 I've made a button that already goes there. Use this, please-->
-    <!-- <form action="/"> -->
+    <form action="/">
       <button type="submit" class="log">User Profile</button>
     </form>
 
