add search by price function

--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -48,6 +48,10 @@ I've made a button that already goes there. Use this, please-->
 
   <select id="selectCapacity" class="selectCapacity"></select>
 
+  <select id="selectPrice" class="selectPrice"></select>
+
+  </select>
+
   <div id = "rentals">
   </div>
 
