--- a/app/public/style/landing.css
+++ b/app/public/style/landing.css
@@ -48,9 +48,10 @@ h2{
    }
 
 .email {
+  width: 260px;
   background-color: #eff2f2;
   border: 0;
-  padding: 10px 145px 12px 15px;
+  padding: 12px 15px;
   text-align: left;
   border-radius: 25px;
   outline: none;
@@ -63,7 +64,8 @@ h2{
 .password{
   background-color: #eff2f2;
   border: 0;
-  padding: 10px 145px 12px 15px;
+  width: 260px;
+  padding: 12px 15px;
   position: absolute;
   top: 57%;
   left: 39%;
@@ -127,4 +129,8 @@ h2{
 .signup:hover{
     color:#41BFB9;
     cursor: pointer;
+}
+
+.flasherror{
+   background: #fde073;
 }
