--- a/app/views/about.erb
+++ b/app/views/about.erb
@@ -7,6 +7,11 @@
 <body>
 
   <div class="circle"></div>
+
+  <div class="team">
+    <img src="design_images/unnamed.jpg" width="400" height="280" >
+  </div>
+
   <h1> “Behind the scenes</h1>
   <h2> Of MakersBNB”</h2>
 
@@ -14,8 +19,8 @@
   Hello! You are now visiting somewhat of an airbnb <br>
   prototype done by four funny and crazy start up
   <br> coders! We say crazy as we've done all of this
-  within <br> six weeks! You've probably clone this repo
-  as you <br> are seeing this now but to find out more about
+  within <br> a week! You've probably clone this repo
+  as you are <br> seeing this now but to find out more about
   us,<br> check us out on our githubs. We hope you have <br>
   fun booking a property to rent with us.
   </head>
