--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -32,9 +32,13 @@
   </form>
 
 
-    <form action="/about">
-      <button type="submit" class="about">About</button>
-    </form>
+  <form action="/about">
+    <button type="submit" class="about">About</button>
+  </form>
+
+  <form action="/rental/new">
+    <button type="submit" class="property">Add Property</button>
+  </form>
 
 <!-- When you get to the confirmation page and mask it as the user profile,
 I've made a button that already goes there. Use this, please-->
@@ -48,7 +52,9 @@ I've made a button that already goes there. Use this, please-->
 
   <select id="selectCapacity" class="selectCapacity"></select>
 
-  <div id = "rentals">
+
+
+  <div id = "rentals" class ="rentals">
   </div>
 
 
