--- a/app/public/style/welcome.css
+++ b/app/public/style/welcome.css
@@ -29,7 +29,7 @@
    margin: 4px 2px;
    cursor: pointer;
    position: absolute;
-   top:1%;
+   top:1.4%;
    left:88%;
    outline:0;
 }
@@ -47,8 +47,26 @@
    cursor: pointer;
    position: absolute;
    margin: 4px 2px;
-   top:1%;
-   left:69%;
+   top:1.4%;
+   left:57%;
+   outline:0;
+}
+
+.property{
+  background-color: #e54e53; /* Green */
+   border: none;
+   color: white;
+   padding: 20px 25px;
+   font-family: 'Cabin';
+   font-size: 35px;
+   font-weight: 700;
+   text-align: center;
+   font-size: 16px;
+   cursor: pointer;
+   position: absolute;
+   margin: 4px 2px;
+   top:1.4%;
+   left:65%;
    outline:0;
 }
 
@@ -65,7 +83,7 @@
    cursor: pointer;
    position: absolute;
    margin: 4px 2px;
-   top:1%;
+   top:1.4%;
    left:77%;
    outline:0;
 }
@@ -76,8 +94,8 @@
   font-weight: 700;
   position: absolute;
   color: #212626;
-  top:-2%;
-  left: 3%;
+  top:-1.0%;
+  left: 3.7%;
   outline:0;
 }
 
@@ -119,4 +137,74 @@
   border: none;
   cursor: pointer;
   outline: 0;
+}
+
+.rentals{
+  position: absolute;
+  top: 22%;
+  left: 5%;
+}
+
+.test{
+  color: #212626;
+  font-family: 'Cabin';
+  font-size: 13px;
+  font-weight: 700;
+  position: absolute;
+  left: 60%;
+  text-align: left;
+
+
+}
+
+.name{
+  color: #212626;
+  font-family: 'Cabin';
+  font-size: 20px;
+  font-weight: 700;
+
+
+}
+
+.price{
+  color: #212626;
+  font-family: 'Cabin';
+  font-size: 15px;
+  font-weight: 700;
+
+}
+
+.button{
+  background-color: #e54e53; /* Green */
+   border: none;
+   color: white;
+   padding: 10px 25px;
+   font-family: 'Cabin';
+   font-size: 35px;
+   font-weight: 700;
+   font-size: 16px;
+   cursor: pointer;
+   outline:0;
+
+}
+
+.capacity{
+  font-family: 'Cabin';
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 20px;
+}
+
+.image{
+  width: 2;
+  padding: 0px ;
+}
+
+.container{
+  background-color: #eff2f2;
+  padding: 10px 2px 10px 10px;
+  border-radius: 20px;
+  width: 250px;
+  height: 260px;
+
 }
