--- a/app/views/rental_overview.erb
+++ b/app/views/rental_overview.erb
@@ -43,6 +43,17 @@
 
   </div>
 
+  <h2>Enter Review</h2>
+
+  <form id = "leave-review" action='/rental/overview' method='POST' >
+    <input type='text' name='description' placeholder='Enter Description:' />
+    <input type='text' name='experience' value='true' placeholder='Enter Description:' />
+
+    <input type='submit' value='submit'>
+  </form>
+
+  <!-- <div id="rental-review"></div> -->
+
 
   <script src = "/src/rental_overview.js"></script>
 
