--- a/app/views/rental_overview.erb
+++ b/app/views/rental_overview.erb
@@ -60,9 +60,7 @@
   <h2>Enter Review</h2>
 
   <form id = "leave-review" action='/rental/overview' method='POST' >
-    <input type='text' name='description' placeholder='Enter Description:' />
-    <input type='text' name='experience' value='true' placeholder='Enter Description:' />
-
+    <input type='text' name='description' placeholder='Leave a review:' />
     <input type='submit' value='submit'>
   </form>
 
