Hide review form

--- a/app/views/rental_overview.erb
+++ b/app/views/rental_overview.erb
@@ -59,10 +59,10 @@
 
   <h2>Enter Review</h2>
 
-  <form id = "leave-review" action='/rental/overview' method='POST' >
+  <!-- <form id = "leave-review" action='/rental/overview' method='POST' >
     <input type='text' name='description' placeholder='Leave a review:' />
     <input type='submit' value='submit'>
-  </form>
+  </form> -->
 
   <!-- <div id="rental-review"></div> -->
 
